# Delaunay_Triangulation

./: .gitignore  CMakeLists.txt  Delaunay.cpp  Delaunay.h  DelaunayTriangulation.sln  DelaunayTriangulation.vcxproj  DelaunayTriangulation.vcxproj.filters  Mesh.cpp  Mesh.h  Parser.cpp  Parser.h  input.txt  main.cpp  ouput.ply
Debug/: DelaunayTriangulation.ilk  delaunay.obj.enc  vc141.idb
Debug/Delaunay.05B38F2F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DelaunayTriangulation.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ENTREGAR/: Delaunay.cpp  ouput.ply
Release/: DelaunayTriangulation.iobj  DelaunayTriangulation.ipdb
Release/Delaunay.05B38F2F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DelaunayTriangulation.lastbuildstate  DelaunayTriangulation.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
